Fix crash due to race condition.